--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="home-image">
                     <div class="profile-image-container">
                         <div class="profile-image-placeholder">
-                          <img src="img/profpic.jpg">
+                          <img src="img/headerpic.jpg">
                             <span>Profile Photo</span>
                         </div>
                         <div class="profile-image-overlay"></div>
