--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="home-image">
                     <div class="profile-image-container">
                         <div class="profile-image-placeholder">
-                          <img src="img/headerpic.jpg">
+                          <img src="img/profpic.jpg">
                             <span>Profile Photo</span>
                         </div>
                         <div class="profile-image-overlay"></div>
@@ -158,7 +158,7 @@
                         <div class="project-technologies">
                             <span class="tech-tag figma-tag">Figma</span>
                         </div>
-                        <button class="btn btn-primary project-btn" onclick="openProject('https://www.figma.com/design/qfXGW9uZCLZubzEPDtqDV8/JBank--We-Trust-?t=8RTU7kHTis9SC0zG-1')">
+                        <button class="btn btn-primary project-btn" onclick="openProject('')">
                             <i class="fas fa-external-link-alt"></i>
                             View Project
                         </button>
