--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="project-technologies">
                             <span class="tech-tag figma-tag">Figma</span>
                         </div>
-                        <button class="btn btn-primary project-btn" onclick="openProject('')">
+                        <button class="btn btn-primary project-btn" onclick="openProject('https://www.figma.com/design/qfXGW9uZCLZubzEPDtqDV8/JBank--We-Trust-?node-id=0-1&p=f&t=olKfHWuT9DuVmKpL-0')">
                             <i class="fas fa-external-link-alt"></i>
                             View Project
                         </button>
