--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="home-buttons">
                         <button class="btn btn-primary" id="download-resume-btn">
                             <i class="fas fa-download"></i>
-                            Download Resume
+                            Download CV
                         </button>
                         <button class="btn btn-outline" id="view-work-btn">
                             View My Work
